<resources>
    <string name="app_name">TicTacToe</string>
    <string name="dialog_ok">OK</string>
    <string name="alert_title">Alert</string>
    <string name="dialogplay_eng">Play</string>
    <string name="dialogplay_nor">Spill</string>
    <string name="dialogcancel_eng">Cancel</string>
    <string name="dialogcancel_nor">Avbryt</string>
    <string name="finish_alert_eng">Are you sure you want to exit?</string>
    <string name="finish_alert_nor">Er du sikker på at du vil avslutte?</string>
    <string name="winner_eng">Winner: %1$s</string>
    <string name="winner_nor">Vinner: %1$s</string>
    <string name="player1_fill">%1$s [X]</string>
    <string name="player2_fill">%1$s [O]</string>
    <string name="colon">%1$s: %2$d</string>
    <string name="player_score">%1$d</string>
    <string name="player_placeholder_eng">Player</string>
    <string name="player_placeholder_nor">Spiller</string>
    <string name="num_rounds_hint_eng">Number of rounds to win</string>
    <string name="num_rounds_hint_nor">Antall runder til seier</string>
    <string name="moves_per_win_nor">Antall turer per runde: %1$s</string>
    <string name="moves_per_win_eng">Moves per round: %1$s</string>
    <string name="error_register_eng">You did not enter name for player</string>
    <string name="error_register_nor">Du skrev ikke inn navn for spiller</string>
    <string name="language_eng">English</string>
    <string name="language_nor">Norsk</string>
    <string name="btn_game_eng">Play TicTacToe</string>
    <string name="btn_howto_eng">How to play</string>
    <string name="btn_game_nor">Spill Bondesjakk</string>
    <string name="btn_howto_nor">Hvordan spiller man?</string>
    <string name="btn_exit_eng">Exit</string>
    <string name="btn_exit_nor">Avslutt</string>
    <string name="subtype_no"/>
    <string name="subtype_en_US"/>
    <string name="home_eng">Home</string>
    <string name="home_nor">Hjem</string>
    <string name="thewinner_was_nor">Vinneren var %1$s</string>
    <string name="thewinner_was_eng">The winner was %1$s</string>
    <string name="player_turn_eng">%1$s is up</string>
    <string name="player_turn_nor">Det er %1$s sin tur</string>
    <string name="draw_eng">The game ended in draw</string>
    <string name="draw_nor">Det ble uavgjort</string>
    <string name="next_round_eng">Next round</string>
    <string name="next_round_nor">Neste runde</string>
    <string name="dialog_title_eng">How to play</string>
    <string name="dialog_title_nor">Hvordan spiller man</string>
    <string name="register_title_eng">Register players</string>
    <string name="register_title_nor">Registrer spillere</string>
    <string name="dialog_message_eng">In tictactoe, one player starts drawing by clicking a cell in the grid. Once a player has drawn in 3 boxes in a row (either diagonally, horizontonally or vertically), the player wins. If no one draws 3 in a row when the board is filled, there will be a tie. You can register how many rounds define a total winner.</string>
    <string name="dialog_message_nor">I bondesjakk starter den ene spilleren med å tegne ved å trykke på en av rutene. Når en spiller har tegnet i 3 bokser på rad (enten dialognalt, horisontalt eller vertikalt), vinner spilleren. Dersom ingen klarer å tegne 3 på rad før brettet er fylt ut, blir det uavgjort. Man kan registrere hvor mange runder som skal til for å kåre en vinner.</string>

</resources>
